# itucsse19

./: .gitignore  README.rst  pyproject.toml
itucsse19/: __init__.py  dbconn.py  dbinit.py  event.py  event_test.py  forms.py  institution.py  invitation.py  user.py
itucsse19/queries/: address_info.sql  adress_table.sql  event_info.sql  event_table.sql  init_ins.sql  institution_info.sql  invitation_info.sql  invitation_table.sql  notif_table.sql  participants.sql  school_table.sql  university_table.sql  user_info.sql  user_table.sql  volunteers.sql
itucsse19/static/: main.css  tables.css
itucsse19/templates/: addresses.html  create_event.html  home.html  home_layout.html  home_page_layout.html  hschool_representative.html  hschool_student.html  institution_profile.html  layout.html  login.html  myevents.html  register.html  rep_home_page.html  representative_layout.html  univ_student_layout.html  university_representative.html  university_student.html  update_institution_info.html
itucsse19/test/: event_test.py  invitation_test.py
