[tool.poetry]
name = "itucsse19"
version = "0.1.0"
description = "Project for group 19"
authors = ["Idil Ugurnal <ugurnal15@itu.edu.tr>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.5"
flask = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
